# linux_apps_nx_enc_filter

./: Makefile.am  NX_CBaseFilter.cpp  NX_CBaseFilter.h  NX_CFileWriteFilter.cpp  NX_CFileWriteFilter.h  NX_CVideoEncoderFilter.cpp  NX_CVideoEncoderFilter.h  NX_CVipFilter.cpp  NX_CVipFilter.h  NX_DebugMsg.cpp  NX_DebugMsg.h  NX_EncoderManager.cpp  NX_EncoderManager.h  NX_EventMessage.h  NX_PlayerConfig.h  NX_SystemCall.h  NX_SystemCallLinux.cpp  NX_SystemCallWin32.cpp  README.md  main.cpp  project.config
